
2017-03-30  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (compute_size): padding for aligned OCCURS items should go
	  after the last item, not the beginning of the group (bug #155).
	* field.c (validate_field): added warning for misaligned pointers.

2017-03-22  Dave Pitts <dpitts@cozx.com>

	* cobc.c, cobc.h: Added Error/Warning summary to listings.
	* error.c: Added filename to error struct for summary.
	* cobc.c: Added code to close and open append the listing file when
	  calling the external cross reference, cobxref.

2017-03-21  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Changed symbol listing indentation and added redefines clause
	  to symbol listing.

2017-03-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: bug #364 moved (output_initialize_chaining) out of
	  (output_initialize_one), special handling for chaining only during
	  program initialization
	* codegen.c (output_internal_function): [bugs:#354] generate code for
	  raising COB_FERROR_CHAINING when CHAINING program is not the
	  main program instead of when it is called the second time

2017-03-19  Dave Pitts <dpitts@cozx.com>

	* cobc.h, pplex.l: Restored copy_tail functionality. The copy books were
	  not being chained for the listing processor.

2017-03-19  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (setup_program_start): moved call to (cb_build_program) to
	  (setup_program), after the PROGRAM-ID has been checked for
	  redefinition (see bug #271).
	* parser.y (file_control_entry): fixed bug #352 by not setting
	  current_file to NULL in invalid SELECT entries.
	* parser.y (file_control_entry): added parser error handler so typos
	  don't define an erroneous SELECT entry.

2017-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_check_overlapping): return a possible overlap if at least
	  one of the vars can have an assignment of a different address
	* parser.y (end_scope_of_program_name): fix possible access of NULL var